# practicellms

./: .gitignore  README.md  langgraph-practice-exercises.md  pyproject.toml
src/: exercise_eight.py  exercise_eight_alt.py  exercise_five.py  exercise_four.py  exercise_nine.py  exercise_nine_alt.py  exercise_one.py  exercise_seven.py  exercise_six.py  exercise_three.py  exercise_two.py
src/docs/: company_offerings_overview.txt  customer_quote_johnson.txt  employee_data_sheet.txt  quarterly_tax_form_941.txt  warranty_policy_document.txt
src/shared/: lc_llm.py
