[project]
name = "practicellms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.6.1",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.3.31",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.10",
]
